--- a/css/communicat-IA.css
+++ b/css/communicat-IA.css
@@ -1,3 +1,59 @@
+html {
+  background: #bc48ff;
+  background: -webkit-radial-gradient(
+    circle,
+    #bc48ff 0%,
+    rgba(230, 16, 16, 0.57) 50%,
+    #3c0843 100%
+  );
+  background: radial-gradient(
+    circle,
+    #bc48ff 0%,
+    rgba(230, 16, 16, 0.57) 50%,
+    #3c0843 100%
+  );
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+  color: #141414;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  cursor: default;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+button {
+  padding: 0;
+  border: none;
+  cursor: pointer;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .go-back {
   border: none;
   border-radius: 6px;
