--- a/css/communicat-IA.css
+++ b/css/communicat-IA.css
@@ -63,6 +63,8 @@ img {
 
 svg {
   display: inline-block;
+  padding: 0;
+  margin: 0;
 }
 
 .chat-container {
@@ -87,7 +89,15 @@ svg {
   margin-bottom: 10px;
 }
 
-.user-talt-btn,
+.inner-form-svg {
+  position: absolute;
+  width: 50px;
+  height: 70px;
+  bottom: 10px;
+  right: 155px;
+}
+
+.user-talk-btn,
 .user-send-btn {
   height: 30px;
   width: 30px;
@@ -108,7 +118,26 @@ svg {
   padding: 5px 35px 5px 5px;
 }
 
-.user-talt-btn {
+.message-ai {
+  position: relative;
+  border-radius: 4px 48px 45px;
+  padding: 10px 10px 10px 10px;
+  background-color: beige;
+  opacity: 0.9;
+  margin-bottom: 35px;
+}
+
+.message-user {
+  position: relative;
+  text-align: end;
+  border-radius: 33px 4px 28px 29px;
+  padding: 10px 10px 10px 10px;
+  background-color: beige;
+  opacity: 0.9;
+  margin-bottom: 35px;
+}
+
+.user-talk-btn {
   position: absolute;
   top: 4px;
   right: 5px;
@@ -122,30 +151,19 @@ svg {
   background-color: blueviolet;
 }
 
-.message-ia {
-  position: relative;
-  border-radius: 4px 48px 45px;
-  padding: 10px 10px 10px 10px;
-  background-color: beige;
-  opacity: 0.9;
-  margin-bottom: 10px;
+.inner-message-svg-user {
+  position: absolute;
+  bottom: -21px;
+  right: 10px;
 }
 
-.message-user {
-  position: relative;
-  text-align: end;
-  border-radius: 33px 4px 28px 29px;
-  padding: 10px 10px 10px 10px;
-  background-color: beige;
-  opacity: 0.9;
-  margin-bottom: 10px;
+.inner-message-svg-ai {
+  position: absolute;
+  bottom: -21px;
+  left: 10px;
 }
 
-.inner-message-svg {
-  background-color: gainsboro;
-}
-
-.time-ia {
+.time-ai {
   display: flex;
   margin-right: 10px;
   justify-content: flex-end;
@@ -155,4 +173,16 @@ svg {
   display: flex;
   margin-left: 10px;
   justify-content: flex-start;
+}
+
+.btn-copy,
+.btn-speech {
+  width: 15px;
+  height: 15px;
+  background-color: transparent;
+  padding: 5px;
+}
+
+.btn-copy {
+  margin-right: 5px;
 }
