--- a/css/communicat-IA.css
+++ b/css/communicat-IA.css
@@ -130,6 +130,7 @@ svg {
   background-color: beige;
   opacity: 0.9;
   margin-bottom: 35px;
+  opacity: 0.5;
 }
 
 .message-user {
@@ -140,6 +141,7 @@ svg {
   background-color: beige;
   opacity: 0.9;
   margin-bottom: 35px;
+  opacity: 0.7;
 }
 
 .user-talk-btn {
@@ -174,6 +176,7 @@ svg {
   height: 15px;
   background-color: transparent;
   padding: 5px;
+  outline: none;
 }
 
 .btn-copy {
